// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateRateLimiterDelay when now = then + 1000 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 200,
  "limit 10 and used  5 with ttr  9700": 200,
  "limit 10 and used  5 with ttr 12100": 200,
  "limit 10 and used  5 with ttr 14500": 400,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 200,
  "limit 10 and used  6 with ttr  7300": 400,
  "limit 10 and used  6 with ttr  9700": 600,
  "limit 10 and used  6 with ttr 12100": 800,
  "limit 10 and used  6 with ttr 14500": 1000,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 400,
  "limit 10 and used  7 with ttr  4900": 800,
  "limit 10 and used  7 with ttr  7300": 1200,
  "limit 10 and used  7 with ttr  9700": 1600,
  "limit 10 and used  7 with ttr 12100": 2000,
  "limit 10 and used  7 with ttr 14500": 2400,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 800,
  "limit 10 and used  8 with ttr  4900": 1600,
  "limit 10 and used  8 with ttr  7300": 2200,
  "limit 10 and used  8 with ttr  9700": 3000,
  "limit 10 and used  8 with ttr 12100": 3800,
  "limit 10 and used  8 with ttr 14500": 4600,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 1400,
  "limit 10 and used  9 with ttr  4900": 2800,
  "limit 10 and used  9 with ttr  7300": 4200,
  "limit 10 and used  9 with ttr  9700": 5600,
  "limit 10 and used  9 with ttr 12100": 7000,
  "limit 10 and used  9 with ttr 14500": 8400,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 2400,
  "limit 10 and used 10 with ttr  4900": 4800,
  "limit 10 and used 10 with ttr  7300": 7200,
  "limit 10 and used 10 with ttr  9700": 9600,
  "limit 10 and used 10 with ttr 12100": 12000,
  "limit 10 and used 10 with ttr 14500": 14400,
}
`;

exports[`calculateRateLimiterDelay when now = then + 8500 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 200,
  "limit 10 and used  5 with ttr 12100": 200,
  "limit 10 and used  5 with ttr 14500": 400,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 200,
  "limit 10 and used  6 with ttr  9700": 600,
  "limit 10 and used  6 with ttr 12100": 800,
  "limit 10 and used  6 with ttr 14500": 1000,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 200,
  "limit 10 and used  7 with ttr  7300": 400,
  "limit 10 and used  7 with ttr  9700": 1600,
  "limit 10 and used  7 with ttr 12100": 2000,
  "limit 10 and used  7 with ttr 14500": 2400,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 800,
  "limit 10 and used  8 with ttr  7300": 1200,
  "limit 10 and used  8 with ttr  9700": 3000,
  "limit 10 and used  8 with ttr 12100": 3800,
  "limit 10 and used  8 with ttr 14500": 4600,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 1600,
  "limit 10 and used  9 with ttr  7300": 2200,
  "limit 10 and used  9 with ttr  9700": 5600,
  "limit 10 and used  9 with ttr 12100": 7000,
  "limit 10 and used  9 with ttr 14500": 8400,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 400,
  "limit 10 and used 10 with ttr  4900": 2800,
  "limit 10 and used 10 with ttr  7300": 4200,
  "limit 10 and used 10 with ttr  9700": 9600,
  "limit 10 and used 10 with ttr 12100": 12000,
  "limit 10 and used 10 with ttr 14500": 14400,
}
`;

exports[`calculateRateLimiterDelay when now = then + 16000 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 200,
  "limit 10 and used  6 with ttr 12100": 200,
  "limit 10 and used  6 with ttr 14500": 400,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 200,
  "limit 10 and used  7 with ttr  9700": 600,
  "limit 10 and used  7 with ttr 12100": 800,
  "limit 10 and used  7 with ttr 14500": 1000,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 400,
  "limit 10 and used  8 with ttr  9700": 1600,
  "limit 10 and used  8 with ttr 12100": 2000,
  "limit 10 and used  8 with ttr 14500": 2400,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 200,
  "limit 10 and used  9 with ttr  7300": 1200,
  "limit 10 and used  9 with ttr  9700": 3000,
  "limit 10 and used  9 with ttr 12100": 3800,
  "limit 10 and used  9 with ttr 14500": 4600,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 800,
  "limit 10 and used 10 with ttr  7300": 2200,
  "limit 10 and used 10 with ttr  9700": 5600,
  "limit 10 and used 10 with ttr 12100": 7000,
  "limit 10 and used 10 with ttr 14500": 8400,
}
`;

exports[`calculateRateLimiterDelay when now = then + 23500 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 0,
  "limit 10 and used  6 with ttr 12100": 200,
  "limit 10 and used  6 with ttr 14500": 400,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 0,
  "limit 10 and used  7 with ttr  9700": 200,
  "limit 10 and used  7 with ttr 12100": 800,
  "limit 10 and used  7 with ttr 14500": 1000,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 200,
  "limit 10 and used  8 with ttr  9700": 600,
  "limit 10 and used  8 with ttr 12100": 2000,
  "limit 10 and used  8 with ttr 14500": 2400,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 0,
  "limit 10 and used  9 with ttr  7300": 400,
  "limit 10 and used  9 with ttr  9700": 1600,
  "limit 10 and used  9 with ttr 12100": 3800,
  "limit 10 and used  9 with ttr 14500": 4600,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 200,
  "limit 10 and used 10 with ttr  7300": 1200,
  "limit 10 and used 10 with ttr  9700": 3000,
  "limit 10 and used 10 with ttr 12100": 7000,
  "limit 10 and used 10 with ttr 14500": 8400,
}
`;

exports[`calculateRateLimiterDelay when now = then + 31000 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 0,
  "limit 10 and used  6 with ttr 12100": 0,
  "limit 10 and used  6 with ttr 14500": 0,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 0,
  "limit 10 and used  7 with ttr  9700": 0,
  "limit 10 and used  7 with ttr 12100": 200,
  "limit 10 and used  7 with ttr 14500": 400,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 0,
  "limit 10 and used  8 with ttr  9700": 200,
  "limit 10 and used  8 with ttr 12100": 800,
  "limit 10 and used  8 with ttr 14500": 1000,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 0,
  "limit 10 and used  9 with ttr  7300": 200,
  "limit 10 and used  9 with ttr  9700": 600,
  "limit 10 and used  9 with ttr 12100": 2000,
  "limit 10 and used  9 with ttr 14500": 2400,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 0,
  "limit 10 and used 10 with ttr  7300": 400,
  "limit 10 and used 10 with ttr  9700": 1600,
  "limit 10 and used 10 with ttr 12100": 3800,
  "limit 10 and used 10 with ttr 14500": 4600,
}
`;

exports[`calculateRateLimiterDelay when now = then + 38500 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 0,
  "limit 10 and used  6 with ttr 12100": 0,
  "limit 10 and used  6 with ttr 14500": 0,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 0,
  "limit 10 and used  7 with ttr  9700": 0,
  "limit 10 and used  7 with ttr 12100": 0,
  "limit 10 and used  7 with ttr 14500": 400,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 0,
  "limit 10 and used  8 with ttr  9700": 200,
  "limit 10 and used  8 with ttr 12100": 200,
  "limit 10 and used  8 with ttr 14500": 1000,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 0,
  "limit 10 and used  9 with ttr  7300": 0,
  "limit 10 and used  9 with ttr  9700": 600,
  "limit 10 and used  9 with ttr 12100": 800,
  "limit 10 and used  9 with ttr 14500": 2400,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 0,
  "limit 10 and used 10 with ttr  7300": 200,
  "limit 10 and used 10 with ttr  9700": 1600,
  "limit 10 and used 10 with ttr 12100": 2000,
  "limit 10 and used 10 with ttr 14500": 4600,
}
`;

exports[`calculateRateLimiterDelay when now = then + 46000 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 0,
  "limit 10 and used  6 with ttr 12100": 0,
  "limit 10 and used  6 with ttr 14500": 0,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 0,
  "limit 10 and used  7 with ttr  9700": 0,
  "limit 10 and used  7 with ttr 12100": 0,
  "limit 10 and used  7 with ttr 14500": 0,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 0,
  "limit 10 and used  8 with ttr  9700": 0,
  "limit 10 and used  8 with ttr 12100": 200,
  "limit 10 and used  8 with ttr 14500": 400,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 0,
  "limit 10 and used  9 with ttr  7300": 0,
  "limit 10 and used  9 with ttr  9700": 200,
  "limit 10 and used  9 with ttr 12100": 800,
  "limit 10 and used  9 with ttr 14500": 1000,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 0,
  "limit 10 and used 10 with ttr  7300": 0,
  "limit 10 and used 10 with ttr  9700": 600,
  "limit 10 and used 10 with ttr 12100": 2000,
  "limit 10 and used 10 with ttr 14500": 2400,
}
`;

exports[`calculateRateLimiterDelay when now = then + 53500 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr  2500": 0,
  "limit 10 and used  0 with ttr  4900": 0,
  "limit 10 and used  0 with ttr  7300": 0,
  "limit 10 and used  0 with ttr  9700": 0,
  "limit 10 and used  0 with ttr 12100": 0,
  "limit 10 and used  0 with ttr 14500": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr  2500": 0,
  "limit 10 and used  1 with ttr  4900": 0,
  "limit 10 and used  1 with ttr  7300": 0,
  "limit 10 and used  1 with ttr  9700": 0,
  "limit 10 and used  1 with ttr 12100": 0,
  "limit 10 and used  1 with ttr 14500": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr  2500": 0,
  "limit 10 and used  2 with ttr  4900": 0,
  "limit 10 and used  2 with ttr  7300": 0,
  "limit 10 and used  2 with ttr  9700": 0,
  "limit 10 and used  2 with ttr 12100": 0,
  "limit 10 and used  2 with ttr 14500": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr  2500": 0,
  "limit 10 and used  3 with ttr  4900": 0,
  "limit 10 and used  3 with ttr  7300": 0,
  "limit 10 and used  3 with ttr  9700": 0,
  "limit 10 and used  3 with ttr 12100": 0,
  "limit 10 and used  3 with ttr 14500": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr  2500": 0,
  "limit 10 and used  4 with ttr  4900": 0,
  "limit 10 and used  4 with ttr  7300": 0,
  "limit 10 and used  4 with ttr  9700": 0,
  "limit 10 and used  4 with ttr 12100": 0,
  "limit 10 and used  4 with ttr 14500": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr  2500": 0,
  "limit 10 and used  5 with ttr  4900": 0,
  "limit 10 and used  5 with ttr  7300": 0,
  "limit 10 and used  5 with ttr  9700": 0,
  "limit 10 and used  5 with ttr 12100": 0,
  "limit 10 and used  5 with ttr 14500": 0,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr  2500": 0,
  "limit 10 and used  6 with ttr  4900": 0,
  "limit 10 and used  6 with ttr  7300": 0,
  "limit 10 and used  6 with ttr  9700": 0,
  "limit 10 and used  6 with ttr 12100": 0,
  "limit 10 and used  6 with ttr 14500": 0,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr  2500": 0,
  "limit 10 and used  7 with ttr  4900": 0,
  "limit 10 and used  7 with ttr  7300": 0,
  "limit 10 and used  7 with ttr  9700": 0,
  "limit 10 and used  7 with ttr 12100": 0,
  "limit 10 and used  7 with ttr 14500": 0,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr  2500": 0,
  "limit 10 and used  8 with ttr  4900": 0,
  "limit 10 and used  8 with ttr  7300": 0,
  "limit 10 and used  8 with ttr  9700": 0,
  "limit 10 and used  8 with ttr 12100": 0,
  "limit 10 and used  8 with ttr 14500": 400,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr  2500": 0,
  "limit 10 and used  9 with ttr  4900": 0,
  "limit 10 and used  9 with ttr  7300": 0,
  "limit 10 and used  9 with ttr  9700": 0,
  "limit 10 and used  9 with ttr 12100": 200,
  "limit 10 and used  9 with ttr 14500": 1000,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr  2500": 0,
  "limit 10 and used 10 with ttr  4900": 0,
  "limit 10 and used 10 with ttr  7300": 0,
  "limit 10 and used 10 with ttr  9700": 200,
  "limit 10 and used 10 with ttr 12100": 800,
  "limit 10 and used 10 with ttr 14500": 2400,
}
`;

exports[`calculateRateLimiterDelay when now = then 1`] = `
Object {
  "limit 10 and used  0 with ttr   100": 0,
  "limit 10 and used  0 with ttr   800": 0,
  "limit 10 and used  0 with ttr  1500": 0,
  "limit 10 and used  0 with ttr  2200": 0,
  "limit 10 and used  0 with ttr  2900": 0,
  "limit 10 and used  0 with ttr  3600": 0,
  "limit 10 and used  0 with ttr  4300": 0,
  "limit 10 and used  0 with ttr  5000": 0,
  "limit 10 and used  0 with ttr  5700": 0,
  "limit 10 and used  0 with ttr  6400": 0,
  "limit 10 and used  0 with ttr  7100": 0,
  "limit 10 and used  0 with ttr  7800": 0,
  "limit 10 and used  0 with ttr  8500": 0,
  "limit 10 and used  0 with ttr  9200": 0,
  "limit 10 and used  0 with ttr  9900": 0,
  "limit 10 and used  0 with ttr 10600": 0,
  "limit 10 and used  0 with ttr 11300": 0,
  "limit 10 and used  0 with ttr 12000": 0,
  "limit 10 and used  0 with ttr 12700": 0,
  "limit 10 and used  0 with ttr 13400": 0,
  "limit 10 and used  0 with ttr 14100": 0,
  "limit 10 and used  0 with ttr 14800": 0,
  "limit 10 and used  1 with ttr   100": 0,
  "limit 10 and used  1 with ttr   800": 0,
  "limit 10 and used  1 with ttr  1500": 0,
  "limit 10 and used  1 with ttr  2200": 0,
  "limit 10 and used  1 with ttr  2900": 0,
  "limit 10 and used  1 with ttr  3600": 0,
  "limit 10 and used  1 with ttr  4300": 0,
  "limit 10 and used  1 with ttr  5000": 0,
  "limit 10 and used  1 with ttr  5700": 0,
  "limit 10 and used  1 with ttr  6400": 0,
  "limit 10 and used  1 with ttr  7100": 0,
  "limit 10 and used  1 with ttr  7800": 0,
  "limit 10 and used  1 with ttr  8500": 0,
  "limit 10 and used  1 with ttr  9200": 0,
  "limit 10 and used  1 with ttr  9900": 0,
  "limit 10 and used  1 with ttr 10600": 0,
  "limit 10 and used  1 with ttr 11300": 0,
  "limit 10 and used  1 with ttr 12000": 0,
  "limit 10 and used  1 with ttr 12700": 0,
  "limit 10 and used  1 with ttr 13400": 0,
  "limit 10 and used  1 with ttr 14100": 0,
  "limit 10 and used  1 with ttr 14800": 0,
  "limit 10 and used  2 with ttr   100": 0,
  "limit 10 and used  2 with ttr   800": 0,
  "limit 10 and used  2 with ttr  1500": 0,
  "limit 10 and used  2 with ttr  2200": 0,
  "limit 10 and used  2 with ttr  2900": 0,
  "limit 10 and used  2 with ttr  3600": 0,
  "limit 10 and used  2 with ttr  4300": 0,
  "limit 10 and used  2 with ttr  5000": 0,
  "limit 10 and used  2 with ttr  5700": 0,
  "limit 10 and used  2 with ttr  6400": 0,
  "limit 10 and used  2 with ttr  7100": 0,
  "limit 10 and used  2 with ttr  7800": 0,
  "limit 10 and used  2 with ttr  8500": 0,
  "limit 10 and used  2 with ttr  9200": 0,
  "limit 10 and used  2 with ttr  9900": 0,
  "limit 10 and used  2 with ttr 10600": 0,
  "limit 10 and used  2 with ttr 11300": 0,
  "limit 10 and used  2 with ttr 12000": 0,
  "limit 10 and used  2 with ttr 12700": 0,
  "limit 10 and used  2 with ttr 13400": 0,
  "limit 10 and used  2 with ttr 14100": 0,
  "limit 10 and used  2 with ttr 14800": 0,
  "limit 10 and used  3 with ttr   100": 0,
  "limit 10 and used  3 with ttr   800": 0,
  "limit 10 and used  3 with ttr  1500": 0,
  "limit 10 and used  3 with ttr  2200": 0,
  "limit 10 and used  3 with ttr  2900": 0,
  "limit 10 and used  3 with ttr  3600": 0,
  "limit 10 and used  3 with ttr  4300": 0,
  "limit 10 and used  3 with ttr  5000": 0,
  "limit 10 and used  3 with ttr  5700": 0,
  "limit 10 and used  3 with ttr  6400": 0,
  "limit 10 and used  3 with ttr  7100": 0,
  "limit 10 and used  3 with ttr  7800": 0,
  "limit 10 and used  3 with ttr  8500": 0,
  "limit 10 and used  3 with ttr  9200": 0,
  "limit 10 and used  3 with ttr  9900": 0,
  "limit 10 and used  3 with ttr 10600": 0,
  "limit 10 and used  3 with ttr 11300": 0,
  "limit 10 and used  3 with ttr 12000": 0,
  "limit 10 and used  3 with ttr 12700": 0,
  "limit 10 and used  3 with ttr 13400": 0,
  "limit 10 and used  3 with ttr 14100": 0,
  "limit 10 and used  3 with ttr 14800": 0,
  "limit 10 and used  4 with ttr   100": 0,
  "limit 10 and used  4 with ttr   800": 0,
  "limit 10 and used  4 with ttr  1500": 0,
  "limit 10 and used  4 with ttr  2200": 0,
  "limit 10 and used  4 with ttr  2900": 0,
  "limit 10 and used  4 with ttr  3600": 0,
  "limit 10 and used  4 with ttr  4300": 0,
  "limit 10 and used  4 with ttr  5000": 0,
  "limit 10 and used  4 with ttr  5700": 0,
  "limit 10 and used  4 with ttr  6400": 0,
  "limit 10 and used  4 with ttr  7100": 0,
  "limit 10 and used  4 with ttr  7800": 0,
  "limit 10 and used  4 with ttr  8500": 0,
  "limit 10 and used  4 with ttr  9200": 0,
  "limit 10 and used  4 with ttr  9900": 0,
  "limit 10 and used  4 with ttr 10600": 0,
  "limit 10 and used  4 with ttr 11300": 0,
  "limit 10 and used  4 with ttr 12000": 0,
  "limit 10 and used  4 with ttr 12700": 0,
  "limit 10 and used  4 with ttr 13400": 0,
  "limit 10 and used  4 with ttr 14100": 0,
  "limit 10 and used  4 with ttr 14800": 0,
  "limit 10 and used  5 with ttr   100": 0,
  "limit 10 and used  5 with ttr   800": 0,
  "limit 10 and used  5 with ttr  1500": 0,
  "limit 10 and used  5 with ttr  2200": 0,
  "limit 10 and used  5 with ttr  2900": 0,
  "limit 10 and used  5 with ttr  3600": 0,
  "limit 10 and used  5 with ttr  4300": 0,
  "limit 10 and used  5 with ttr  5000": 0,
  "limit 10 and used  5 with ttr  5700": 0,
  "limit 10 and used  5 with ttr  6400": 200,
  "limit 10 and used  5 with ttr  7100": 200,
  "limit 10 and used  5 with ttr  7800": 200,
  "limit 10 and used  5 with ttr  8500": 200,
  "limit 10 and used  5 with ttr  9200": 200,
  "limit 10 and used  5 with ttr  9900": 200,
  "limit 10 and used  5 with ttr 10600": 200,
  "limit 10 and used  5 with ttr 11300": 200,
  "limit 10 and used  5 with ttr 12000": 200,
  "limit 10 and used  5 with ttr 12700": 200,
  "limit 10 and used  5 with ttr 13400": 400,
  "limit 10 and used  5 with ttr 14100": 400,
  "limit 10 and used  5 with ttr 14800": 400,
  "limit 10 and used  6 with ttr   100": 0,
  "limit 10 and used  6 with ttr   800": 0,
  "limit 10 and used  6 with ttr  1500": 0,
  "limit 10 and used  6 with ttr  2200": 0,
  "limit 10 and used  6 with ttr  2900": 200,
  "limit 10 and used  6 with ttr  3600": 200,
  "limit 10 and used  6 with ttr  4300": 200,
  "limit 10 and used  6 with ttr  5000": 200,
  "limit 10 and used  6 with ttr  5700": 400,
  "limit 10 and used  6 with ttr  6400": 400,
  "limit 10 and used  6 with ttr  7100": 400,
  "limit 10 and used  6 with ttr  7800": 600,
  "limit 10 and used  6 with ttr  8500": 600,
  "limit 10 and used  6 with ttr  9200": 600,
  "limit 10 and used  6 with ttr  9900": 600,
  "limit 10 and used  6 with ttr 10600": 800,
  "limit 10 and used  6 with ttr 11300": 800,
  "limit 10 and used  6 with ttr 12000": 800,
  "limit 10 and used  6 with ttr 12700": 800,
  "limit 10 and used  6 with ttr 13400": 1000,
  "limit 10 and used  6 with ttr 14100": 1000,
  "limit 10 and used  6 with ttr 14800": 1000,
  "limit 10 and used  7 with ttr   100": 0,
  "limit 10 and used  7 with ttr   800": 0,
  "limit 10 and used  7 with ttr  1500": 200,
  "limit 10 and used  7 with ttr  2200": 200,
  "limit 10 and used  7 with ttr  2900": 400,
  "limit 10 and used  7 with ttr  3600": 600,
  "limit 10 and used  7 with ttr  4300": 600,
  "limit 10 and used  7 with ttr  5000": 800,
  "limit 10 and used  7 with ttr  5700": 800,
  "limit 10 and used  7 with ttr  6400": 1000,
  "limit 10 and used  7 with ttr  7100": 1000,
  "limit 10 and used  7 with ttr  7800": 1200,
  "limit 10 and used  7 with ttr  8500": 1400,
  "limit 10 and used  7 with ttr  9200": 1400,
  "limit 10 and used  7 with ttr  9900": 1600,
  "limit 10 and used  7 with ttr 10600": 1600,
  "limit 10 and used  7 with ttr 11300": 1800,
  "limit 10 and used  7 with ttr 12000": 2000,
  "limit 10 and used  7 with ttr 12700": 2000,
  "limit 10 and used  7 with ttr 13400": 2200,
  "limit 10 and used  7 with ttr 14100": 2200,
  "limit 10 and used  7 with ttr 14800": 2400,
  "limit 10 and used  8 with ttr   100": 0,
  "limit 10 and used  8 with ttr   800": 200,
  "limit 10 and used  8 with ttr  1500": 400,
  "limit 10 and used  8 with ttr  2200": 600,
  "limit 10 and used  8 with ttr  2900": 800,
  "limit 10 and used  8 with ttr  3600": 1000,
  "limit 10 and used  8 with ttr  4300": 1400,
  "limit 10 and used  8 with ttr  5000": 1600,
  "limit 10 and used  8 with ttr  5700": 1800,
  "limit 10 and used  8 with ttr  6400": 2000,
  "limit 10 and used  8 with ttr  7100": 2200,
  "limit 10 and used  8 with ttr  7800": 2400,
  "limit 10 and used  8 with ttr  8500": 2600,
  "limit 10 and used  8 with ttr  9200": 3000,
  "limit 10 and used  8 with ttr  9900": 3200,
  "limit 10 and used  8 with ttr 10600": 3400,
  "limit 10 and used  8 with ttr 11300": 3600,
  "limit 10 and used  8 with ttr 12000": 3800,
  "limit 10 and used  8 with ttr 12700": 4000,
  "limit 10 and used  8 with ttr 13400": 4200,
  "limit 10 and used  8 with ttr 14100": 4600,
  "limit 10 and used  8 with ttr 14800": 4800,
  "limit 10 and used  9 with ttr   100": 0,
  "limit 10 and used  9 with ttr   800": 400,
  "limit 10 and used  9 with ttr  1500": 800,
  "limit 10 and used  9 with ttr  2200": 1200,
  "limit 10 and used  9 with ttr  2900": 1600,
  "limit 10 and used  9 with ttr  3600": 2000,
  "limit 10 and used  9 with ttr  4300": 2400,
  "limit 10 and used  9 with ttr  5000": 2800,
  "limit 10 and used  9 with ttr  5700": 3200,
  "limit 10 and used  9 with ttr  6400": 3600,
  "limit 10 and used  9 with ttr  7100": 4000,
  "limit 10 and used  9 with ttr  7800": 4600,
  "limit 10 and used  9 with ttr  8500": 5000,
  "limit 10 and used  9 with ttr  9200": 5400,
  "limit 10 and used  9 with ttr  9900": 5800,
  "limit 10 and used  9 with ttr 10600": 6200,
  "limit 10 and used  9 with ttr 11300": 6600,
  "limit 10 and used  9 with ttr 12000": 7000,
  "limit 10 and used  9 with ttr 12700": 7400,
  "limit 10 and used  9 with ttr 13400": 7800,
  "limit 10 and used  9 with ttr 14100": 8200,
  "limit 10 and used  9 with ttr 14800": 8600,
  "limit 10 and used 10 with ttr   100": 0,
  "limit 10 and used 10 with ttr   800": 800,
  "limit 10 and used 10 with ttr  1500": 1400,
  "limit 10 and used 10 with ttr  2200": 2200,
  "limit 10 and used 10 with ttr  2900": 2800,
  "limit 10 and used 10 with ttr  3600": 3600,
  "limit 10 and used 10 with ttr  4300": 4200,
  "limit 10 and used 10 with ttr  5000": 5000,
  "limit 10 and used 10 with ttr  5700": 5600,
  "limit 10 and used 10 with ttr  6400": 6400,
  "limit 10 and used 10 with ttr  7100": 7000,
  "limit 10 and used 10 with ttr  7800": 7800,
  "limit 10 and used 10 with ttr  8500": 8400,
  "limit 10 and used 10 with ttr  9200": 9200,
  "limit 10 and used 10 with ttr  9900": 9800,
  "limit 10 and used 10 with ttr 10600": 10600,
  "limit 10 and used 10 with ttr 11300": 11200,
  "limit 10 and used 10 with ttr 12000": 12000,
  "limit 10 and used 10 with ttr 12700": 12600,
  "limit 10 and used 10 with ttr 13400": 13400,
  "limit 10 and used 10 with ttr 14100": 14000,
  "limit 10 and used 10 with ttr 14800": 14800,
  "limit 10 and used 11 with ttr   100": 0,
  "limit 10 and used 11 with ttr   800": 800,
  "limit 10 and used 11 with ttr  1500": 1400,
  "limit 10 and used 11 with ttr  2200": 2200,
  "limit 10 and used 11 with ttr  2900": 2800,
  "limit 10 and used 11 with ttr  3600": 3600,
  "limit 10 and used 11 with ttr  4300": 4200,
  "limit 10 and used 11 with ttr  5000": 5000,
  "limit 10 and used 11 with ttr  5700": 5600,
  "limit 10 and used 11 with ttr  6400": 6400,
  "limit 10 and used 11 with ttr  7100": 7000,
  "limit 10 and used 11 with ttr  7800": 7800,
  "limit 10 and used 11 with ttr  8500": 8400,
  "limit 10 and used 11 with ttr  9200": 9200,
  "limit 10 and used 11 with ttr  9900": 9800,
  "limit 10 and used 11 with ttr 10600": 10600,
  "limit 10 and used 11 with ttr 11300": 11200,
  "limit 10 and used 11 with ttr 12000": 12000,
  "limit 10 and used 11 with ttr 12700": 12600,
  "limit 10 and used 11 with ttr 13400": 13400,
  "limit 10 and used 11 with ttr 14100": 14000,
  "limit 10 and used 11 with ttr 14800": 14800,
  "limit 10 and used 12 with ttr   100": 0,
  "limit 10 and used 12 with ttr   800": 800,
  "limit 10 and used 12 with ttr  1500": 1400,
  "limit 10 and used 12 with ttr  2200": 2200,
  "limit 10 and used 12 with ttr  2900": 2800,
  "limit 10 and used 12 with ttr  3600": 3600,
  "limit 10 and used 12 with ttr  4300": 4200,
  "limit 10 and used 12 with ttr  5000": 5000,
  "limit 10 and used 12 with ttr  5700": 5600,
  "limit 10 and used 12 with ttr  6400": 6400,
  "limit 10 and used 12 with ttr  7100": 7000,
  "limit 10 and used 12 with ttr  7800": 7800,
  "limit 10 and used 12 with ttr  8500": 8400,
  "limit 10 and used 12 with ttr  9200": 9200,
  "limit 10 and used 12 with ttr  9900": 9800,
  "limit 10 and used 12 with ttr 10600": 10600,
  "limit 10 and used 12 with ttr 11300": 11200,
  "limit 10 and used 12 with ttr 12000": 12000,
  "limit 10 and used 12 with ttr 12700": 12600,
  "limit 10 and used 12 with ttr 13400": 13400,
  "limit 10 and used 12 with ttr 14100": 14000,
  "limit 10 and used 12 with ttr 14800": 14800,
  "limit 10 and used 13 with ttr   100": 0,
  "limit 10 and used 13 with ttr   800": 800,
  "limit 10 and used 13 with ttr  1500": 1400,
  "limit 10 and used 13 with ttr  2200": 2200,
  "limit 10 and used 13 with ttr  2900": 2800,
  "limit 10 and used 13 with ttr  3600": 3600,
  "limit 10 and used 13 with ttr  4300": 4200,
  "limit 10 and used 13 with ttr  5000": 5000,
  "limit 10 and used 13 with ttr  5700": 5600,
  "limit 10 and used 13 with ttr  6400": 6400,
  "limit 10 and used 13 with ttr  7100": 7000,
  "limit 10 and used 13 with ttr  7800": 7800,
  "limit 10 and used 13 with ttr  8500": 8400,
  "limit 10 and used 13 with ttr  9200": 9200,
  "limit 10 and used 13 with ttr  9900": 9800,
  "limit 10 and used 13 with ttr 10600": 10600,
  "limit 10 and used 13 with ttr 11300": 11200,
  "limit 10 and used 13 with ttr 12000": 12000,
  "limit 10 and used 13 with ttr 12700": 12600,
  "limit 10 and used 13 with ttr 13400": 13400,
  "limit 10 and used 13 with ttr 14100": 14000,
  "limit 10 and used 13 with ttr 14800": 14800,
  "limit 10 and used 14 with ttr   100": 0,
  "limit 10 and used 14 with ttr   800": 800,
  "limit 10 and used 14 with ttr  1500": 1400,
  "limit 10 and used 14 with ttr  2200": 2200,
  "limit 10 and used 14 with ttr  2900": 2800,
  "limit 10 and used 14 with ttr  3600": 3600,
  "limit 10 and used 14 with ttr  4300": 4200,
  "limit 10 and used 14 with ttr  5000": 5000,
  "limit 10 and used 14 with ttr  5700": 5600,
  "limit 10 and used 14 with ttr  6400": 6400,
  "limit 10 and used 14 with ttr  7100": 7000,
  "limit 10 and used 14 with ttr  7800": 7800,
  "limit 10 and used 14 with ttr  8500": 8400,
  "limit 10 and used 14 with ttr  9200": 9200,
  "limit 10 and used 14 with ttr  9900": 9800,
  "limit 10 and used 14 with ttr 10600": 10600,
  "limit 10 and used 14 with ttr 11300": 11200,
  "limit 10 and used 14 with ttr 12000": 12000,
  "limit 10 and used 14 with ttr 12700": 12600,
  "limit 10 and used 14 with ttr 13400": 13400,
  "limit 10 and used 14 with ttr 14100": 14000,
  "limit 10 and used 14 with ttr 14800": 14800,
}
`;
